Fix display font not showing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 
 @theme {
   --font-sans: InterVariable;
-  --font-display-0: Trade Winds;
+  --font-display: Trade Winds;
   --font-mono: JetBrains Mono Variable;
 }
 
